# decay

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: Cargo.toml
benches/benches/ecs/: main.rs  resources.rs  spawn.rs
benches/benches/render/: framebuffer.rs  io_ceiling.rs  main.rs
examples/: dashboard.rs  simple.rs
src/: anim.rs  intro.rs  lib.rs  rand.rs  serde.rs  term.rs  time.rs
src/core/: app.rs  cmd.rs  context.rs  event.rs  input.rs  mod.rs  node.rs  plugin.rs  state.rs  store.rs  system.rs
src/ui/: button.rs  input.rs  label.rs  mod.rs  panel.rs  progress.rs  spinner.rs  status.rs  theme.rs  timer.rs
tests/: core.rs
