[workspace]
members = [".", "benches"]

[package]
name = "decay"
version = "0.2.1"
edition = "2024"
description = "Zero-dependency modular TUI framework"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/oracle58/decay"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["tui", "terminal", "framework"]

[features]
default = ["full"]
full = ["core", "term", "ui", "anim", "time", "rand", "serde", "intro"]
core = ["term"]
term = ["core"]
ui = ["core", "term"]
progress = ["term"]
anim = ["core"]
time = ["core"]
rand = ["core"]
serde = []
intro = ["term"]

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["full"]

[[example]]
name = "dashboard"
path = "examples/dashboard.rs"
required-features = ["full"]
