[workspace]
members = [".", "benches"]

[package]
name = "decay"
version = "0.2.3"
edition = "2024"
description = "Zero-dependency TUI framework"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/oracle58/decay"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["tui", "terminal", "framework"]

[features]
default = ["full"]
full = ["ui"]
ui = ["label", "timer", "panel", "button", "input", "progress", "intro", "spinner"]
label = []
timer = []
panel = []
button = []
input = []
progress = []
intro = []
spinner = []

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["full"]

[[example]]
name = "dashboard"
path = "examples/dashboard.rs"
required-features = ["full"]
